--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Тест</title>
-	<link href="https://fonts.googleapis.com/css?family=Fira+Sans:400,500|Source+Code+Pro:300,900" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,400,500|Source+Code+Pro:300,900" rel="stylesheet">
+	<link rel="stylesheet" href="css/owl.carousel.css">
+	<link rel="stylesheet" href="css/owl.theme.default.css">
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -22,8 +24,44 @@
 			<li><a href="#">Контакты</a></li>
 		</ul>
 	</div>
+	<div class="header_center">
+		<div class="header_center_top">
+			<span>Пространство <br> для людей дела!</span>
+			<p>Комфортная среда для бизнеса,<br> безопасная для размещения инвестиций</p>
+		</div>
+		<div class="header_center_bottom">
+			<span class="proc">65%</span>
+			<div class="text">
+				<span class="text1">площадей Продано! </span> <br>
+				<span class="text2">ЗВОНИ (4212) 60-30-80</span>
+
+			</div>
+			<span class="tel"><a href="#form">Заказать звонок</a></span>
+		</div>
+	</div>
 </header>
+<div class="block1">
+	<h2>актуальные предложения</h2>
+	<div class="carusel1 owl-carousel owl-theme">
+		<div class="item">
+			<h4>Офисы до 50 м2</h4>
+			<img src="img/slider/foto6.png" alt="">
+		</div>
+		<div class="item">
+			<h4>Офисы от 50 до 200 м2</h4>
+			<img src="img/slider/foto6.png" alt="">
+		</div>
+		<div class="item">
+			<h4>Офисы от 200 до 500 м2</h4>
+			<img src="img/slider/foto6.png" alt="">
+		</div>
+
+	</div>
+</div>
+<div class="fack"></div>
 	
 	<script src="js/jquery-1.12.4.min.js"></script>
+	<script src="js/owl.carousel.min.js"></script>
+	<script src="js/main.js"></script>
 </body>
 </html>
