--- a/index.html
+++ b/index.html
@@ -58,6 +58,28 @@
 
 	</div>
 </div>
+<div class="block2">
+	<div class="row">
+		<div class="block2_item1">
+			<span>
+				Престижный бизнес-район <br>
+				в 3 минутах от красной <br>
+				линии
+			</span>
+		</div>
+		<div class="block2_item2">
+
+		</div>
+	</div>
+	<div class="row">
+		<div class="block2_item3">
+
+		</div>
+		<div class="block2_item4">
+
+		</div>
+	</div>
+</div>
 <div class="fack"></div>
 	
 	<script src="js/jquery-1.12.4.min.js"></script>
