--- a/index.html
+++ b/index.html
@@ -13,6 +13,21 @@
 <header>
 	<div class="top_header">
 			<img src="img/logo.png" class="logo" alt="">
+		<div class="nav-icon-line">
+			<div class="wr">
+				<div id="nav-icon" class="click-in">
+					<span></span>
+					<span></span>
+					<span></span>
+					<span></span>
+				</div>
+			</div>
+			<div class="menu_mob">
+				<span class="tel">(4212) 60-30-80</span>
+				<p>ул. Тургенева, 88 (1 этаж)</p>
+			</div>
+		</div>
+		<div class="clearfix"></div>
 
 		<ul class="top_menu">
 			<li><a href="#">О бизнес-районе</a></li>
@@ -33,10 +48,10 @@
 			<span class="proc">65%</span>
 			<div class="text">
 				<span class="text1">площадей Продано! </span> <br>
-				<span class="text2">ЗВОНИ (4212) 60-30-80</span>
-
+				<span class="text2 hide-in-480">ЗВОНИ (4212) 60-30-80</span>
 			</div>
 			<span class="tel"><a href="#form">Заказать звонок</a></span>
+			<span class="text2 show-480px">ЗВОНИ (4212) 60-30-80</span>
 		</div>
 	</div>
 </header>
@@ -60,22 +75,22 @@
 </div>
 <div class="block2">
 	<div class="row">
-		<div class="block2_item1">
+		<div class="block2_item1 bg">
 			<span>
 				Престижный бизнес-район <br>
 				в 3 минутах от красной <br>
 				линии
 			</span>
 		</div>
-		<div class="block2_item2">
+		<div class="block2_item2 bg">
 
 		</div>
 	</div>
 	<div class="row">
-		<div class="block2_item3">
+		<div class="block2_item3 bg">
 
 		</div>
-		<div class="block2_item4">
+		<div class="block2_item4 bg">
 
 		</div>
 	</div>
