--- a/index.html
+++ b/index.html
@@ -56,7 +56,13 @@
 	</div>
 </header>
 <div class="block1">
+	<span class="img-bg-mob"></span>
 	<h2>актуальные предложения</h2>
+	<div class="show-992px mob-text">
+		<span>Офисы до 50 м2</span>
+		<span>Офисы от 50 до 200 м2</span>
+		<span>Офисы от 200 до 500 м2</span>
+	</div>
 	<div class="carusel1 owl-carousel owl-theme">
 		<div class="item">
 			<h4>Офисы до 50 м2</h4>
@@ -76,22 +82,34 @@
 <div class="block2">
 	<div class="row">
 		<div class="block2_item1 bg">
-			<span>
-				Престижный бизнес-район <br>
-				в 3 минутах от красной <br>
-				линии
-			</span>
+			<div class="cover">
+				<span>
+					Престижный бизнес-район<br>в 3 минутах от красной<br>линии
+				</span>
+			</div>
 		</div>
 		<div class="block2_item2 bg">
-
+			<div class="cover">
+				<span>
+					Эксплуатируемая<br>кровля
+				</span>
+			</div>
 		</div>
 	</div>
 	<div class="row">
 		<div class="block2_item3 bg">
-
+			<div class="cover">
+				<span>
+					Отделка помещений<br>класса «Бизнес»
+				</span>
+			</div>
 		</div>
 		<div class="block2_item4 bg">
-
+			<div class="cover">
+				<span>
+					Выгодное<br>расположение
+				</span>
+			</div>
 		</div>
 	</div>
 </div>
