--- a/index.html
+++ b/index.html
@@ -113,6 +113,90 @@
 		</div>
 	</div>
 </div>
+
+<div class="block3">
+	<div class="row">
+		<div class="blcok3_item left">
+			<h2>о бизнес-районе</h2>
+			<ul>
+				<li><span>Бизнес-район находится в 3 минутах от красной <br> линии (1,5 км. от ул. Серышева) по ул. Джамбула.</span></li>
+				<li><span>Элегантная классическая архитектура в стиле «старый Хабаровск»</span></li>
+				<li><span>Паркинг XXL на 180 машино-мест! Места хватит всем.</span></li>
+				<li><span>Великолепный вид на Амур!</span></li>
+				<li>
+					<span>
+						Внутренняя отделка класса "Бизнес": холл и <br> лестница - гранит, алюминиевые двери у каждого <br>
+						помещения, лифты с системой контроля доступа на этаж. 
+					</span>
+				</li>
+				<li><span>В помещениях высокие потолки, много света и воздуха!</span></li>
+
+				<li><span>Профессиональная управляющая компания легко <br> решает бытовые вопросы</span></li>
+				<li><span>Ввод в эксплуатацию II очереди в конце 2018 года</span></li>
+			</ul>
+			<span>
+				ОФИСЫ ОТ 1030 ТЫС. РУБ. <br>ВОЗМОЖНОСТЬ ИПОТЕКИ ДО 15 ЛЕТ!
+			</span>
+		</div>
+		<div class="blcok3_item right bg">
+			<img src="img/foto6.png" alt="">
+		</div>
+	</div>
+	<div class="row">
+		<div class="blcok3_item left bg">
+			<img src="img/foto7.png" alt="">
+		</div>
+		<div class="blcok3_item right">
+			<img class="show-992px" src="img/foto7.png" alt="">
+			<h2>Бизнесу особенно  комфортно!</h2>
+			<ul class="list">
+				<li>СРЕДА ДЛЯ УСПЕШНОГО РОСТА!</li>
+				<li><span>Минуты до красной линии! Клиенты доберутся к вам быстро!</span></li>
+				<li><span>Паркинг на 180 машино мест легко решает вопрос парковки.</span></li>
+				<li><span>Столовая прямо в бизнес-комплексе, экономьте свое время!</span></li>
+				<li>
+					<span>
+						Удобная вендинговая зона. Купи ароматный кофе <br> или легкий перекус. Сними деньги - и все не <br> выходя из здания!</span>
+				</li>
+				<li>
+					<span>
+						Помещение 1+1. Переговорная и зал для <br>
+						презентаций в общем пользовании прямо в <br>
+						здании. Расширяй свои границы и не <br>
+						ереплачивай за покупку дополнительных площадей.
+					</span>
+				</li>
+				<li>
+					<span>
+						Нескончаемый трафик проезжающих мимо машин <br>
+						- это постоянный приток новых клиентов, ведь вы всегда на виду!
+					</span>
+				</li>
+				<li>
+					<span>
+						Ваша вывеска заметна! Район в отличии от <br>
+						красной линии не пестрит наружной рекламой.
+					</span>
+				</li>
+				<li>
+					<span>
+						Видеоэкран на фасаде здания - ваш бизнес еще <br>
+						заметнее! Пусть вашу рекламу видят все!
+					</span>
+				</li>
+				<li>
+					<span>
+						Гибкость пространства - все помещения <br>
+						свободной  планировки, есть возможность <br>
+						покупки любых площадей!
+					</span>
+				</li>
+				<li><span>Условия ипотеки от банков-партнеров легки и <br> выгодны!</span></li>
+				<li><span>А приобретать в собственность стало дешевле чем снимать!</span></li>
+			</ul>
+		</div>
+	</div>
+</div>
 <div class="fack"></div>
 	
 	<script src="js/jquery-1.12.4.min.js"></script>
