--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 		<div class="blcok3_item left bg">
 			<img src="img/foto7.png" alt="">
 		</div>
-		<div class="blcok3_item right">
+		<div class="blcok3_item right text">
 			<img class="show-992px" src="img/foto7.png" alt="">
 			<h2>Бизнесу особенно  комфортно!</h2>
 			<ul class="list">
@@ -195,6 +195,12 @@
 				<li><span>А приобретать в собственность стало дешевле чем снимать!</span></li>
 			</ul>
 		</div>
+	</div>
+</div>
+<div class="block4">
+	<div class="row">
+		<img src="img/foto8.png" alt="">
+		<img src="img/foto9.png" alt="">
 	</div>
 </div>
 <div class="fack"></div>
