--- a/index.html
+++ b/index.html
@@ -203,6 +203,75 @@
 		<img src="img/foto9.png" alt="">
 	</div>
 </div>
+<div class="block5">
+
+	<div class="row">
+        <h2>Инвесторам особенно выгодно!</h2>
+        <div class="w"></div>
+		<div class="block5_item">
+			<span class="one">
+                СУПЕР БЫСТРАЯ<br>
+                ОКУПАЕМОСТЬ
+            </span>
+            <ul>
+                <li>
+                    <span>
+                Офисная недвижимость имеет <br> самую быструю окупаемость - 8 лет <br>
+                против 16 лет у жилой недвижимости.
+                    </span>
+                </li>
+                <li>
+                    <span>
+                    Стоимость ремонта офисного <br>помещения минимальна!
+                    </span>
+                </li>
+                <li>
+                    <span>
+                    Офисный ремонт проще и быстрее<br>чем в квартире!
+                    </span>
+                </li>
+                <li>
+                    <span>
+                     Арендаторы-юрлица более<br>дисциплинированны.
+                    </span>
+                </li>
+                <li>
+                    <span>
+                    Высокая статусность объекта <br>
+                    3 минуты от центра, кирпичное<br>здание, отделка помещений<br>гарантируют высокую ликвидность<br>объекта!
+                    </span>
+                </li>
+            </ul>
+		</div>
+		<div class="block5_item">
+			<span class="two">ДОХОДНОЕ<br>УПРАВЛЕНИЕ</span>
+            <ul>
+                <li>
+                    <span>
+                        Вы можете сдавать сами или<br>поручить это профессиональной<br>управляющей компании.
+                    </span>
+                </li>
+                <li>
+                    <span>
+                        Мы сами осуществим за вас поиск <br> арендатора, оформление всех <br> бумаг, обеспечим контроль <br> исполнения договоров.
+                    </span>
+                </li>
+                <li>
+                    <span>
+                        Разрешим конфликтные ситуации.
+                    </span>
+                </li>
+            </ul>
+		</div>
+		<div class="block5_item">
+			<span class="three">ЭКОНОМИЧНОСТЬ<br>ОБСЛУЖИВАНИЯ</span>
+            <ul>
+                <li><span>Возможность подключения <br> газового отопление и <br> сокращения  затрат в 6 РАЗ!</span></li>
+                <li><span>Облицовка из красного кирпича <br> не потребует в ближайшие 50 лет <br> обновления фасада.</span></li>
+            </ul>
+		</div>
+	</div>
+</div>
 <div class="fack"></div>
 	
 	<script src="js/jquery-1.12.4.min.js"></script>
