--- a/index.html
+++ b/index.html
@@ -272,6 +272,44 @@
 		</div>
 	</div>
 </div>
+<div class="block6">
+    <div class="row">
+        <h2>застройщик</h2>
+        <div class="w"></div>
+        <img src="img/logo-in.png" alt="">
+        <div class="w"></div>
+        <div class="wrap">
+            <div class="block6_item">
+                <img src="img/briefcase.png" alt="">
+                <span>6978</span>
+                <p>
+                    квадратных метров <br>
+                    арендуют у нас <br>
+                    успешные бизнесмены
+                </p>
+            </div>
+            <div class="block6_item">
+                <img src="img/multiple-users-silhouette.png" alt="">
+                <span>16639</span>
+                <p>
+                    квадратных метров <br>
+                    обустраивают счастливые <br>
+                    семьи, заселившиеся <br>
+                    в наши дома
+                </p>
+            </div>
+            <div class="block6_item">
+                <img src="img/rocket-pointing-to-upper-left-direction.png" alt="">
+                <span>7 лет</span>
+                <p>
+                    профессионального опыта <br>
+                    на рынке строительства <br>
+                    жилья
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
 <div class="fack"></div>
 	
 	<script src="js/jquery-1.12.4.min.js"></script>
