--- a/index.html
+++ b/index.html
@@ -310,8 +310,50 @@
         </div>
     </div>
 </div>
+<div class="block7">
+    <div class="row">
+        <div class="block7_item left">
+        <h2>гарантии важны</h2>
+            <span>НАДЕЖНОСТЬ СДЕЛКИ</span>
+            <ul>
+                <li><span> Объект строительства не в залоге, застройщик не <br> в кредитах</span></li>
+                <li><span>Прозрачность сделки: единый собственник, он же <br> застройщик, он же продавец</span></li>
+                <li><span>Сделку сопровождают профессиональные юристы</span></li>
+                <li>
+                    <span>
+                      Застройщик с хорошей историей и репутацией! <br>
+                       Более 7 лет на рынке. Построено более 16 тыс. <br>
+                       м.кв жилой и коммерческой недвижимости. Нет <br>
+                       судебных споров с  дольщиками!
+                    </span>
+                </li>
+            </ul>
+            <span>БЕЗОПАСНОСТЬ ИНВЕСТИЦИЙ</span>
+            <ul>
+                <li>
+                    <span>
+                    Что может быть стабильнее и безопаснее <br>
+                    вложения  в недвижимость?
+                    </span>
+                </li>
+                <li>
+                    <span>
+                    Защита от инфляции. Ваши деньги надежно <br>
+                    вложены  в офисную недвижимость, они <br>
+                    сохраняют свою ценнность и через 10 лет!
+                    </span>
+                </li>
+                <li><span>Доход 1% в месяц от сдачи в аренду. Получайте <br> постоянный доход!</span></li>
+                <li><span>Высокая статусность объекта обеспечивает <br> стабильность дохода</span></li>
+            </ul>
+        </div>
+        <div class="block7_item">
+            <img src="img/block-7.png" alt="">
+        </div>
+    </div>
+</div>
 <div class="fack"></div>
-	
+
 	<script src="js/jquery-1.12.4.min.js"></script>
 	<script src="js/owl.carousel.min.js"></script>
 	<script src="js/main.js"></script>
