--- a/index.html
+++ b/index.html
@@ -352,6 +352,40 @@
         </div>
     </div>
 </div>
+<div class="block8">
+    <div class="row">
+        <div class="block8_item">
+            <img src="img/foto11.png" alt="">
+        </div>
+        <div class="block8_item right">
+            <h2>ипотека</h2>
+            <h4>ПЛАТИТЕ ЗА СОБСТВЕННЫЙ ОФИС!</h4>
+            <ul>
+                <li><span>Ипотека до 15 лет!</span></li>
+                <li><span>Ипотека возможна даже на этапе строительства</span></li>
+                <li><span>Всего от 13% годовых</span></li>
+                <li><span>Поможем оформить!</span></li>
+                <li><span>444 рубля в день за собственный офис!</span></li>
+            </ul>
+            <div class="block">
+                <span>стоимость</span> <br>
+                <p>аренды офиса</p>
+                <p>15 м.кв</p>
+                <p>15 000 р./мес.</p>
+            </div>
+            <div class="block two">
+                <span>ипотечный платеж</span> <br>
+                <p>за офис</p>
+                <p>15 м.кв</p>
+                <p>3 300 р./мес.</p>
+           </div>
+            <p class="us_part">
+                Наш постоянный партнер ПАО «ТРАНСКАПИТАЛБАНК» <br>
+                Генеральная лицензия банка России №2210 от 02.06.2015
+            </p>
+        </div>
+    </div>
+</div>
 <div class="fack"></div>
 
 	<script src="js/jquery-1.12.4.min.js"></script>
