--- a/index.html
+++ b/index.html
@@ -386,6 +386,42 @@
         </div>
     </div>
 </div>
+<footer>
+    <div class="row">
+        <h2>контакты</h2>
+        <div class="w"></div>
+        <div class="footer_item">
+            <div class="block">
+                <span>офис продаж</span>
+                <p>
+                    БИЗНЕС-РАЙОНА «НЕФТЯНИК» <br>
+                    г. Хабаровск, <br>
+                    ул. Тургенева, 88 (1 этаж)
+                </p>
+            </div>
+            <div class="block">
+                <span>телефон</span>
+                <p>
+                    +7 (4212) 60-30-80
+                </p>
+            </div>
+            <div class="block">
+                <span>режим работы</span>
+                <p>
+                    ПН.-ПТ. 9–19, СБ. 10–17
+                </p>
+            </div>
+        </div>
+        <div class="footer_item right">
+            <h4>ВСЕ ЕЩЕ ИЗУЧАЕШЬ САЙТ? <br>
+                У НАС УЖЕ ПРОДАНО <br>
+                65% ПЛОЩАДЕЙ. <br>
+                ХВАТИТ ДУМАТЬ - ЗВОНИ!</h4>
+            <span class="tel">(4212) 60-30-80</span>
+        </div>
+
+    </div>
+</footer>
 <div class="fack"></div>
 
 	<script src="js/jquery-1.12.4.min.js"></script>
