--- a/index.html
+++ b/index.html
@@ -2,15 +2,19 @@
 <html lang="ru">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Тест</title>
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="/img/favicon.png" type="image/x-icon" />
+    <link rel="icon" type="/img/favicon.png" sizes="192x192" />
+ 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+	<title>ПРОСТРАНСТВО ДЛЯ ЛЮДЕЙ ДЕЛА!</title>
 	<link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,400,500|Source+Code+Pro:300,900" rel="stylesheet">
 	<link rel="stylesheet" href="css/owl.carousel.css">
 	<link rel="stylesheet" href="css/owl.theme.default.css">
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-<form data-effect="mfp-zoom-in" method="post" action="/message.php" class="white-popup mfp-with-anim mfp-hide form" id="form">
+<form data-effect="mfp-zoom-in" method="post" action="/message.php" class="white-popup zoom-anim-dialog mfp-hide form" id="form">
      <h2>заказать звонок</h2>
 
     <input id="name" type="text" name="name" placeholder="ИМЯ">
@@ -67,7 +71,7 @@
 				<span class="text1">площадей Продано! </span> <br>
 				<span class="text2 hide-in-480">ЗВОНИ (4212) 60-30-80</span>
 			</div>
-			<span class="tel"><a class="popup-with-form"  data-effect="mfp-zoom-in"  href="#form" >Заказать звонок</a></span>
+			<span class="tel"><a class="popup-with-form popup-with-zoom-anim"   href="#form" >Заказать звонок</a></span>
 			<span class="text2 show-480px">ЗВОНИ (4212) 60-30-80</span>
 		</div>
 	</div>
