--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 	<meta charset="UTF-8">
     <!-- Favicon -->
     <link rel="shortcut icon" href="/img/favicon.png" type="image/x-icon" />
-    <link rel="icon" type="/img/favicon.png" sizes="192x192" />
  	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 	<title>ПРОСТРАНСТВО ДЛЯ ЛЮДЕЙ ДЕЛА!</title>
@@ -424,6 +423,12 @@
                 <span>телефон</span>
                 <p>
                     +7 (4212) 60-30-80
+                </p>
+            </div>
+            <div class="block">
+                <span>ПОЧТА</span>
+                <p>
+                    ENJOY-WORK@KETOM.RU
                 </p>
             </div>
             <div class="block">
